# world_system

./: Cargo.toml
assets/shaders/: water.wgsl
src/: main.rs
src/camera/: camera.rs  mod.rs  movement.rs  spawn.rs
src/map/: assets.rs  generator.rs  map.rs  mod.rs  spawn.rs
src/map/tiles/: materials.rs  mod.rs  tiles.rs
src/ui/: display.rs  mod.rs  ui.rs
